--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>iReporter</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
 </head>
-<body className="db-body">
+<body>
   <div id="root">
     
   </div>
